<resources>
    <string name="app_name">app_kotlin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="anim_search_view">searchView</string>

    <string name="food_category">美食分类</string>

    <string name="search">搜索</string>
    <string name="food_search">美食搜索</string>
    <string name="search_food">输入菜名或食物材料</string>
    <string name="search_history">历史搜索</string>
    <string name="search_hot">热门搜索</string>

    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_loading_error">数据加载中&#8230;</string>

    <string name="food_detail_title">美食详情</string>
    <string name="food_introduction">菜品描述</string>
    <string name="food_tag">菜品标签</string>
    <string name="food_material">食材明细</string>
    <string name="food_main_material">主料</string>
    <string name="food_ingredients">辅料</string>
    <string name="food_make_step">制作步骤</string>
</resources>
